Bug 946969 - Ionmonkey (ARM): correct AbsI, integer absolute value, r=mjrosenb